kustomizations/storage/garage/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: storage
spec:
  type: ClusterIP
  selector:
    app: garage
  ports:
    - name: s3
      port: 3900
    - name: rpc
      port: 3901
    - name: admin
      port: 3903
