kustomizations/storage/garage/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: garage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: garage.lan
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.34
  selector:
    app: garage
  ports:
  - name: s3
    port: 3900
    targetPort: 3900
  - name: rpc
    port: 3901
    targetPort: 3901
  - name: s3web
    port: 3902
    targetPort: 3902
  - name: api
    port: 3903
    targetPort: 3903
