kustomizations/storage/garage/webui-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: garage-webui
spec:
  selector:
    app: garage-webui
  ports:
  - name: webui
    port: 3909
    targetPort: 3909
