kustomizations/storage/garage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage
  namespace: storage
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # Indicar a Traefik que mande el tráfico al interceptor de KEDA
    traefik.ingress.kubernetes.io/service.name: keda-add-on-http-interceptor.keda.svc.cluster.local
    traefik.ingress.kubernetes.io/service.port: "8080"
spec:
  ingressClassName: traefik
  rules:
  - host: s3.garage.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: garage
            port:
              number: 3900
  - host: admin.garage.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: garage
            port:
              number: 3903
  - host: garage.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: garage-webui
            port:
              number: 3909
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-external
  namespace: storage
  annotations:
    cloudflare-tunnel-ingress-controller.clbs.io/origin-disable-chunked-encoding: "false"
    cloudflare-tunnel-ingress-controller.clbs.io/origin-connect-timeout: "30s"
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: "s3.citocafecito.work"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: garage
            port:
              number: 3900
  # - host: "*.citocafecito.work"
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: garage
  #           port:
  #             number: 3902
